# semantix

./: .gitignore  README.md  main.py  pyproject.toml
api/: app.py  dependencies.py  middleware.py  models.py
api/routes/: collections.py  documents.py  jobs.py  search.py  ws.py
benchmark/: benchmark.py  dataset.py
core/: __init__.py  collection.py
core/bm25/: __init__.py  index.py  tokenizer.py
core/hybrid/: __init__.py  ranker.py
core/vector/: __init__.py  brute_force.py  hnsw.py  rwlock.py  types.py
dashboard/: package-lock.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/collections/[name]/: page.tsx
dashboard/app/ingest/: page.tsx
dashboard/app/playground/: page.tsx
dashboard/lib/: api.ts
docker/: .env.example  Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  docker-compose.yml
docs/: README.md
embeddings/: __init__.py  base.py  local.py  openai.py
ingestion/: __init__.py  chunker.py  jobs.py  pipeline.py  worker.py
sdk/: __init__.py  async_client.py  client.py  models.py
tests/: test_api.py  test_bm25.py  test_collection.py  test_concurrent.py  test_embeddings.py  test_hybrid.py  test_ingestion.py  test_persistence.py  test_sdk.py  test_vector_smoke.py
