[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantix"
version = "0.1.0"
description = "Self-hostable hybrid search engine (BM25 + vector) built on vectr"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "redis>=5.0",
    "sentence-transformers>=2.7",
    "openai>=1.0",
    "nltk>=3.8",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[redis]>=4.0",
    "fakeredis>=2.20",
    "rich>=13.7",
    "faker>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semantix*", "core*", "embeddings*", "ingestion*", "api*", "sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["core", "embeddings", "ingestion", "api", "sdk"]
